--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
-  "python.pythonPath": "/home/rmcd/miniconda3/envs/fluvial-particle/bin/python"
+  "python.pythonPath": "/home/rmcd/miniconda3/envs/fluvial-particle/bin/python",
+  "esbonio.server.enabled": true
 }
