Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,8 @@ stages:
     - apt-get update
     - apt-get -y install gdal-bin libgdal-dev
     - conda update -n base conda
-    - conda env update -n base --file environment.yml
+    - conda install -c conda-forge mamba
+    - mamba env update -n base --file environment.yml
     - conda init bash
     - source ~/.bashrc
     - source activate base
