--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 .install-deps-template: &install-deps
   before_script:
     - apt-get update
-    - apt-get upgrade
+    - apt-get -y upgrade
     - apt-get -y install gdal-bin libgdal-dev libstdc++6
     - conda update -n base conda
     - conda install -c conda-forge mamba
