--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,8 @@ stages:
     - conda init bash
     - source ~/.bashrc
     - source activate base
-    - python --version
+    - which python
+    - which pip
     - pip install -r requirements.dev --no-deps
     - pre-commit install --install-hooks
     - pip install -e . --no-deps
