minor tweeks trying to get gitlab-ci to work

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
         entry: check-added-large-files
         args: ["--maxkb=3000"]
         language: system
+        exclude: ./tests/data/
       - id: check-toml
         name: Check Toml
         entry: check-toml
