--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
   - conda-forge
 dependencies:
   - python>=3.9,<3.10
+  - mamba>=0.23.3
   - vtk>=9.1
   - pip
   # Production dependencies defined here (as well as in requirements.txt)
