--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,10 +17,8 @@ stages:
     - source ~/.bashrc
     - source activate base
     - which python
-    - which pip
-    - pip install -r requirements.dev
+    - poetry install
     - pre-commit install --install-hooks
-    - pip install -e .
 
 .docker-template: &docker
   <<: *install-deps
