--- a/environment.yml
+++ b/environment.yml
@@ -6,9 +6,9 @@ dependencies:
   - python>=3.9,<3.10
   - mamba>=0.23.3
   - vtk>=9.1
+  - poetry
   - pip
   # Production dependencies defined here (as well as in requirements.txt)
   - click
   - h5py
   - numpy
-  - libstdcxx-ng
