--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ stages:
     - source ~/.bashrc
     - source activate base
     - which python
+    - poetry config virtualenvs.create false
     - poetry install
     - pre-commit install --install-hooks
 
