--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -16,9 +16,16 @@ values =
 
 [bumpversion:part:build]
 
-[bumpversion:file:setup.py]
-search = version="{current_version}"
-replace = version="{new_version}"
+# [bumpversion:file:setup.py]
+# search = version="{current_version}"
+# replace = version="{new_version}"
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
+
+[bumpversion:file:code.json]
+search = version: {current_version}
+replace = version: {new_version}
 
 [bumpversion:file:meta.yaml]
 search = version: {current_version}
