--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -24,8 +24,8 @@ search = version = "{current_version}"
 replace = version = "{new_version}"
 
 [bumpversion:file:code.json]
-search = version: {current_version}
-replace = version: {new_version}
+search = version: "{current_version}"
+replace = version: "{new_version}"
 
 [bumpversion:file:meta.yaml]
 search = version: {current_version}
