--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ readme = "README.md"
 homepage = "https://code.usgs.gov/wma/nhgf/fluvparticle"
 repository = "https://code.usgs.gov/wma/nhgf/fluvparticle"
 documentation = "https://fluvial-particle.readthedocs.io/en/latest/"
+packages = [
+    {include = "fluvial_particle", from="src"}
+]
+
+[tool.poetry.scripts]
+fluvial_particle = "fluvial_particle:track_serial"
+fluvial_particle_mpi = "fluvial_particle:track_mpi"
 
 [tool.poetry.dependencies]
 python = "^3.9"
