--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
-sphinx==4.1.2
-sphinx-click==3.0.1
-sphinx-rtd-theme==0.5.2
-myst-parser==0.17.0
+sphinx
+sphinx-click
+sphinx-rtd-theme
+sphinx-autobuild
+myst-parser
 docutils==0.17
