--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,12 @@ stages:
 .install-deps-template: &install-deps
   before_script:
     - ln -fs /usr/share/zoneinfo/UTC /etc/localtime
+    - cp DOIRootCA2.crt /usr/share/ca-certificates/extra/DOIRootCA2.crt
     - apt-get update
     - apt-get -y upgrade
-    - apt-get -y install gdal-bin libgdal-dev libstdc++6 libgl1-mesa-glx
-    - apt-get -y install ffmpeg libsm6 libxext6
+    - apt-get -y install ca-certificates language-pack-en
+    - apt-get clean
+    - update-ca-certificates
     - mamba update -n base mamba
     - mamba env update -n base --file environment.yml
     - mamba init bash
