--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ stages:
     - apt-get -y install ca-certificates language-pack-en
     - apt-get clean
     - update-ca-certificates
+    - SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
     - mamba update -n base mamba
     - mamba env update -n base --file environment.yml
     - mamba init bash
