--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,12 @@ stages:
     - apt-get clean
     - update-ca-certificates
     - export SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
+    - export CURL_CA_BUNDLE="${SSL_CERT_FILE}";
+    - export GIT_SSL_CAINFO="${SSL_CERT_FILE}";
+    - export PIP_CERT="${SSL_CERT_FILE}";
+    - export REQUESTS_CA_BUNDLE="${SSL_CERT_FILE}";
+    - export NODE_EXTRA_CA_CERTS="${SSL_CERT_FILE}";
+    - export NPM_CONFIG_CAFILE="${SSL_CERT_FILE}";
     - mamba config --set ssl_verify /etc/ssl/certs/ca-certificates.crt
     - mamba update -n base mamba
     - mamba env update -n base --file environment.yml
