update ci with root cert

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ fluvial_particle_mpi = "fluvial_particle:track_mpi"
 python = "^3.9"
 h5py = "^3.7.0"
 vtk = "~9.1"
+nox-poetry = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
