--- a/environment-mpi.yml
+++ b/environment-mpi.yml
@@ -4,8 +4,8 @@ channels:
   - conda-forge
 dependencies:
   - python>=3.9,<3.10
-  - h5py=3.6.0=mpi_mpich_py39ha1f86df_0
-  - vtk>=9.1
+  - h5py=*=mpi_*
+  - vtk>=9.1,<9.2
   - pip
   # Production dependencies defined here (as well as in requirements.txt)
   - click
