--- a/environment-mpi.yml
+++ b/environment-mpi.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python>=3.9,<3.10
   - h5py=*=mpi_*
-  - vtk>=9.1,<9.2
+  - vtk>=9.1
   - pip
   # Production dependencies defined here (as well as in requirements.txt)
   - click
