--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python>=3.9,<3.10
   - mamba>=0.23.3
-  - vtk>=9.1,<9.2
+  - vtk>=9.1
   - poetry
   - pip
   # Production dependencies defined here (as well as in requirements.txt)
