--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,8 @@ name: fluvial-particle
 channels:
   - conda-forge
 dependencies:
-  - python>=3.9,<3.10
-  - mamba>=0.23.3
+  - python>=3.9,<3.12
+  - mamba
   - vtk>=9.1
   - poetry
   - pip
