--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,35 +17,35 @@ fluvial_particle = "fluvial_particle:track_serial"
 fluvial_particle_mpi = "fluvial_particle:track_mpi"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.10,<4.0"
 h5py = "^3.7.0"
 vtk = "^9.1"
 nox-poetry = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
-black = "^22.3.0"
+black = "^24.0.0"
 darglint = "^1.8.1"
-flake8 = "^4.0.1"
-flake8-bandit = "^3.0.0"
-flake8-bugbear = "^22.4.25"
+flake8 = "^7.0.1"
+flake8-bandit = "^4.0.0"
+flake8-bugbear = "^24.4.25"
 flake8-docstrings = "^1.6.0"
-flake8-rst-docstrings = "^0.2.5"
-nox = "^2022.1.7"
+flake8-rst-docstrings = "^0.3.0"
+nox = "^2024.4.15"
 pep8-naming = "^0.12.1"
-pre-commit = "^2.19.0"
+pre-commit = "^3.0.0"
 pre-commit-hooks = "^4.2.0"
 safety = ">=2.2.0"
-mypy = "^0.960"
+mypy = "^1.0.1"
 pytest = "^7.1.2"
-coverage = {extras = ["toml"], version = "^6.4"}
+coverage = {extras = ["toml"], version = "^7.4"}
 Pygments = "^2.12.0"
 typeguard = "^2.13.3"
 xdoctest = "^1.0.0"
-Sphinx = ">=3.1,<5"
-sphinx-click = "^4.1.0"
-sphinx-autobuild = "^2021.3.14"
-sphinx-rtd-theme = "^1.0.0"
-myst-parser = "^0.17.2"
+Sphinx = "^7.0.0"
+sphinx-click = "^6.0.0"
+sphinx-autobuild = "^2024.4.0"
+sphinx-rtd-theme = "^2.0.0"
+myst-parser = "^4.0.0"
 reorder-python-imports = "^3.1.0"
 ipython = "^8.10.0"
 bump2version = "^1.0.1"
@@ -54,6 +54,7 @@ bandit = "^1.7.4"
 [tool.poetry.group.dev.dependencies]
 safety = ">=2.2.0"
 gitpython = ">=3.1.30"
+pydocstyle = "^6.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
