--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
 
     # Utilities
     "ipython>=8.10.0",
-    "bump2version>=1.0.1",
+    "bump-my-version>=0.26.0",
     "gitpython>=3.1.30",
 ]
 
@@ -192,3 +192,21 @@ warn_unused_ignores = false
 module = "noxfile"
 warn_unreachable = false
 disallow_untyped_decorators = false
+
+[tool.bumpversion]
+current_version = "0.0.3"
+commit = true
+tag = true
+tag_name = "v{new_version}"
+tag_message = "Release version {new_version}"
+message = "Bump version: {current_version} → {new_version}"
+
+[[tool.bumpversion.files]]
+filename = "pyproject.toml"
+search = 'version = "{current_version}"'
+replace = 'version = "{new_version}"'
+
+[[tool.bumpversion.files]]
+filename = "src/fluvial_particle/__init__.py"
+search = '__version__ = "{current_version}"'
+replace = '__version__ = "{new_version}"'
