--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fluvial-particle"
-version = "0.0.3"
+version = "0.0.4"
 description = "Lagrangian particle-tracking for fluvial environments."
 authors = [
     {name = "Richard McDonald", email = "rmcd@usgs.gov"}
@@ -194,12 +194,14 @@ warn_unreachable = false
 disallow_untyped_decorators = false
 
 [tool.bumpversion]
-current_version = "0.0.3"
+current_version = "0.0.4"
 commit = true
 tag = true
 tag_name = "v{new_version}"
 tag_message = "Release version {new_version}"
 message = "Bump version: {current_version} → {new_version}"
+parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
+serialize = ["{major}.{minor}.{patch}"]
 
 [[tool.bumpversion.files]]
 filename = "pyproject.toml"
@@ -210,3 +212,18 @@ replace = 'version = "{new_version}"'
 filename = "src/fluvial_particle/__init__.py"
 search = '__version__ = "{current_version}"'
 replace = '__version__ = "{new_version}"'
+
+[[tool.bumpversion.files]]
+filename = ".bumpversion.cfg"
+search = 'current_version = {current_version}'
+replace = 'current_version = {new_version}'
+
+[[tool.bumpversion.files]]
+filename = "code.json"
+search = '"version": "{current_version}"'
+replace = '"version": "{new_version}"'
+
+[[tool.bumpversion.files]]
+filename = "meta.yaml"
+search = 'version: {current_version}'
+replace = 'version: {new_version}'
