--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,8 +62,8 @@ dev = [
 ]
 
 [project.scripts]
-fluvial_particle = "fluvial_particle:track_serial"
-fluvial_particle_mpi = "fluvial_particle:track_mpi"
+fluvial_particle = "fluvial_particle.cli:track_serial"
+fluvial_particle_mpi = "fluvial_particle.cli:track_mpi"
 
 [project.urls]
 Homepage = "https://code.usgs.gov/wma/nhgf/fluvparticle"
@@ -130,7 +130,8 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401", "D104", "PLR0912", "RUF067"]  # Unused imports, missing docstring, too many branches, module exports
+"__init__.py" = ["F401", "D104", "RUF067"]  # Unused imports (re-exports), missing docstring, module-level variables OK
+"simulation.py" = ["PLR0912"]  # Too many branches (complex simulation logic)
 "noxfile.py" = ["D", "S"]         # Skip docstring and security checks
 "tests/**/*.py" = ["D", "S101", "PLR2004"]  # Skip docstrings, allow assert and magic values
 "verify_environment.py" = ["PERF203"]  # Allow try-except in loop for module checking
